--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 	<head>
+		<title>Plant Tracker</title>
+		<meta
+			name="description"
+			content="Plant Tracker is an application designed to help users keep track of their plant care tasks."
+		/>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
+
 	<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
